# mailing-list-rs

./: Cargo.toml  README.md  example-attachment.txt  example-content.html  example-content.txt  example-recipients.txt  mailsend.toml
src/: main.rs  smtp_mailer.rs
