[package]
name = "ttc-mail-sending"
version = "0.1.0"
authors = ["Conzel <38732545+Conzel@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.10.0-beta.3"
structopt = "0.3"
toml = "0.5.8"
serde = { version = "1.0.124", features = ["derive"] }
anyhow = "1.0"
text_io = "0.1.8"
rayon = "1.5"
indicatif = {version = "0.15.0", features = ["rayon"]}
